# TakoPack

./: Cargo.toml  README.md
crates/takopack/: Cargo.toml
crates/takopack-core/: Cargo.toml
crates/takopack-core/src/: config.rs  lib.rs  util.rs
crates/takopack-python/: Cargo.toml
crates/takopack-python/src/: package.rs
crates/takopack-rust/: Cargo.toml
crates/takopack-rust/src/: buildreqs.rs  crates.rs  lib.rs  local.rs  package.rs  range_audit.rs  registry_sync.rs  resolve_check.rs
crates/takopack-rust/src/rpm/: metadata.rs  mod.rs
crates/takopack/src/cli/: commands.rs  options.rs
src/: cli.rs  dynamic_buildreqs.rs  lib.rs  local_package.rs  package.rs  registry_sync.rs  resolve_check.rs  spec_from_toml.rs  track_command.rs  util.rs
src/takopack/: control.rs  mod.rs  spec.rs
